ADD JWT-Auth to swagger documentation
