# backend/app/Http/Controllers/Swagger/MainController.php
@@ -14,6 +14,14 @@ use Illuminate\Http\Request;
  * @OA\PathItem(
  *      path="/api/"
  * )
+ * 
+ * @OA\Components(
+ *      @OA\SecurityScheme(
+ *          securityScheme="bearerAuth",
+ *          type="http",
+ *          scheme="bearer",
+ *      )
+ * )
  */
 class MainController extends Controller
 {
